# microdiag

./: 2026-01-04-debug-optimize-ui.txt  CHANGELOG.md  GITHUB_SECRETS_SETUP.md  README.md  conv-create-superadmin-check-RLS_POLICIES_REQUIREDsql.txt  conv-lastdev-preprod.txt  derniere-conv.txt  godmode-conv.txt  index.html  last-dev-conv.txt  now-conv.txt  package-lock.json  package.json  supabase_security.sql  todolist-dev.txt  v-3.10.0.txt  v2.7.0-diagpro.txt  vite.config.ts
.github/workflows/: build-windows.yml  deploy.yml  release.yml
docs/: DEPLOYMENT.md  VERSION-UPDATE-GUIDE.md
scripts/: cleanup.py  fix_network.py  fix_printer.py  full_security_scan.ps1  system_info.py
src/: App.tsx  constants.ts  styles.css  types.ts
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  database.rs  diagnostics.rs  fixwin.rs  godmode.rs  main.rs  metrics.rs  security.rs  sync.rs
src/components/: AIReport.tsx  CommandPalette.tsx  OnboardingTutorial.tsx  RemoteExecutionModal.tsx  ScriptExecutionModal.tsx  ScriptLoaderModal.tsx  Sidebar.tsx  UpdateModal.tsx  index.ts
src/hooks/: useLocalDb.ts
src/pages/: ChatPage.tsx  DashboardPage.tsx  DiagnosticPage.tsx  FixWinPage.tsx  GodModePage.tsx  ScanPage.tsx  SettingsPage.tsx  ToolsPage.tsx  index.ts
src/services/: aiReport.ts  diagnostics.ts  fixwin.ts  godmode.ts  localDb.ts
src/styles/: base.css  chat.css  dashboard.css  diagnostic.css  fixwin.css  godmode.css  index.css  modals.css  scan.css  script-execution.css  settings.css  sidebar.css  tools.css
tools/: .gitkeep
