[package]
name = "microdiag-sentinel"
version = "2.2.0"
description = "Microdiag Sentinel Agent - Surveillance système intelligente"
authors = ["Microdiag Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-execute", "shell-sidecar", "shell-open", "system-tray", "notification-all", "process-all", "os-all", "fs-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
sysinfo = "0.30"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.10"
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
