[package]
name = "microdiag-sentinel"
version = "2.5.0"
description = "Microdiag Sentinel Agent - Surveillance système intelligente"
authors = ["Microdiag Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-shell = "2.3.3"
tauri-plugin-notification = "2.3.3"
tauri-plugin-process = "2.3.1"
tauri-plugin-os = "2.3.2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-updater = "2.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
sysinfo = "0.30"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.10"
dirs = "5.0"
# Local-First SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# God Mode - Native Performance (Windows)
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
wmi = "0.13"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
